Change "width: 100%;" to "max-width: 100%;", to avoid stretching small images

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -209,7 +209,7 @@ hr {
 }
 
 .module img {
-    width: 100%;
+    max-width: 100%;
     height: auto;
 }
 
